<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!--datos formulario-->
    <string name="correo">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="numero">Numero de Telefono</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="tengoCuenta">Ya tengo Cuenta</string>
    <string name="NoTengoCuenta">¿No tienes cuenta?</string>

    <!--Main text-->
    <string name="servicicios">Servicios</string>
    <string name="permanente">Permanente</string>
    <!--Sucursales-->
    <string name="Sucursales">Sucursales</string>
    <string name="sucursales1">Centro Comercial Bambu</string>
</resources>